MMA-7694 Rydding og refaktorering
- La til noen nye tester
- Tok inn noen Intellij forslag
- Endra noen deprekerte kall